fixed visual bug with the dropcap top border not showing bcs of overflow hidden

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -451,6 +451,7 @@ body {
     float: left;
     padding-left: $spacing-unit / 2;
     overflow: hidden;
+    padding-top: 10px;
  }
 
 .col-12 {
